--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             const user_id = window.location.pathname.split("/").pop();
 
             // إرسال البيانات إلى السيرفر
-            fetch("http://79.99.40.71:6362/upload", {
+            fetch("https://fictional-eureka-97wrw4qqxwq42pjq6-6362.app.github.dev:6362/upload", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
