--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             const user_id = window.location.pathname.split("/").pop();
 
             // إرسال البيانات إلى السيرفر
-            fetch("http://79.99.40.71:6362/upload", {
+            fetch("https://ckfnp3td-6362.uks1.devtunnels.ms:6362/upload", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
