--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             }
 
             // إرسال البيانات إلى السيرفر
-            fetch("https://ckfnp3td-6362.uks1.devtunnels.ms:6362/upload", {
+            fetch("https://ckfnp3td-6362.uks1.devtunnels.ms/upload", {
                 method: "POST",
                 headers: { "Content-Type": "application/json" },
                 body: JSON.stringify({
